--- a/css/main.css
+++ b/css/main.css
@@ -127,7 +127,7 @@ a:visited {
         font-size: x-large;
     }
 }
-*{
+/* *{
     -webkit-filter: grayscale(100%);
     -moz-filter: grayscale(100%);
     -ms-filter: grayscale(100%);
@@ -135,4 +135,4 @@ a:visited {
     filter: grayscale(100%);
     filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); 
     filter: progid:DXImageTransform.Microsoft.BasicImage(grayscale=1);
-}
+} */
