--- a/css/other.css
+++ b/css/other.css
@@ -84,7 +84,7 @@ a:visited
 {
     color: black;
 }
-*{
+/* *{
     -webkit-filter: grayscale(100%);
     -moz-filter: grayscale(100%);
     -ms-filter: grayscale(100%);
@@ -92,4 +92,4 @@ a:visited
     filter: grayscale(100%);
     filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); 
     filter: progid:DXImageTransform.Microsoft.BasicImage(grayscale=1);
-}
+} */
