--- a/css/shooting_star.css
+++ b/css/shooting_star.css
@@ -46,7 +46,7 @@ p{
 	font-family: Font;
 	src: url('../font/HYBiRanTianTianQuanW-2.ttf');
 }
-*{
+/* *{
     -webkit-filter: grayscale(100%);
     -moz-filter: grayscale(100%);
     -ms-filter: grayscale(100%);
@@ -54,4 +54,4 @@ p{
     filter: grayscale(100%);
     filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); 
     filter: progid:DXImageTransform.Microsoft.BasicImage(grayscale=1);
-}
+} */
