--- a/css/shooting_star.css
+++ b/css/shooting_star.css
@@ -47,10 +47,11 @@ p{
 	src: url('../font/HYBiRanTianTianQuanW-2.ttf');
 }
 @media screen and (max-width:800px) {
-    body{
-        top:50px;
+    #button{
+        top:10%;
     }
 }
+
 /* *{
     -webkit-filter: grayscale(100%);
     -moz-filter: grayscale(100%);
