--- a/css/main.css
+++ b/css/main.css
@@ -8,9 +8,8 @@ body{
     font-family:Font;
 }
 .inner{
-    /* background-color:white;
-    backdrop-filter: blur(10px); */
-    border: white solid 2px;
+    backdrop-filter: blur(2px); 
+    border: #3a7fb3 solid 2px;
     border-radius: 20px;
     color: black;
     text-align: center;
